--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "patch-package",
+    "postinstall": "patch-package || ./node_modules/patch-package/index.js",
     "test": "TZ=UTC jest",
     "test:ci": "TZ=UTC jest --ci --runInBand --coverage",
     "upgrade-interactive": "npx npm-check --update",
@@ -98,6 +98,7 @@
     "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.13.0",
     "nodemailer": "^6.7.5",
+    "patch-package": "^6.5.0",
     "pg": "^8.7.3",
     "pg-query-stream": "^4.2.3",
     "prisma": "^2.23.0",
@@ -130,8 +131,6 @@
     "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
     "nock": "^13.2.7",
-    "patch-package": "^6.5.0",
-    "postinstall-postinstall": "^2.1.0",
     "tmc-client-js": "0.0.9",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
