--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@apollo/client": "^3.6.8",
     "@date-io/core": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
