--- a/eslint-custom-rules/package.json
+++ b/eslint-custom-rules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-eslint-custom-rules",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "peerDependencies": {
+    "eslint": "^8.13.0"
+  }
 }
