--- a/backend/package.json
+++ b/backend/package.json
@@ -62,22 +62,11 @@
     "@prisma/client": "2.23",
     "@sentry/integrations": "^6.19.6",
     "@sentry/node": "^6.19.6",
-    "@types/compression": "^1.7.2",
-    "@types/graphql-upload": "^8.0.11",
-    "@types/lodash": "^4.14.182",
-    "@types/luxon": "^2.3.2",
-    "@types/morgan": "^1.9.3",
-    "@types/nodemailer": "^6.4.4",
-    "@types/redis": "^4.0.11",
-    "@types/shortid": "0.0.29",
-    "@types/uuid": "^8.3.4",
-    "@types/websocket": "^1.0.5",
-    "@types/yup": "^0.29.14",
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
-    "concurrently": "^7.2.2",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv-safe": "^8.2.0",
@@ -115,11 +104,20 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/faker": "^5.5.9",
+    "@types/graphql-upload": "^8.0.12",
     "@types/jest": "^28.1.2",
+    "@types/lodash": "^4.14.190",
+    "@types/luxon": "^3.1.0",
     "@types/mime-types": "^2.1.1",
+    "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.6",
+    "@types/shortid": "^0.0.29",
+    "@types/uuid": "^8.3.4",
+    "@types/websocket": "^1.0.5",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
