--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,8 @@
     "@date-io/core": "^2.13.1",
     "@date-io/luxon": "^2.13.1",
     "@emotion/react": "^11.10.5",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.9.1",
@@ -33,11 +33,11 @@
     "@mdx-js/mdx": "^2.1.2",
     "@mdx-js/react": "^2.1.2",
     "@monaco-editor/react": "^4.4.5",
-    "@mui/icons-material": "^5.8.4",
+    "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.8.5",
-    "@next/bundle-analyzer": "^12.1.6",
-    "@next/mdx": "^12.1.6",
+    "@mui/material": "^5.10.16",
+    "@next/bundle-analyzer": "12.2.2",
+    "@next/mdx": "12.2.2",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
@@ -57,10 +57,10 @@
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
     "luxon": "^2.3.1",
-    "material-ui-confirm": "^3.0.4",
+    "material-ui-confirm": "^3.0.7",
     "monaco-editor": "^0.33.0",
     "morgan": "^1.10.0",
-    "next": "^12.1.6",
+    "next": "12.2.2",
     "next-compose-plugins": "^2.2.1",
     "next-env": "^1.1.1",
     "next-fonts": "^1.5.1",
@@ -70,7 +70,7 @@
     "papaparse": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.1",
+    "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
     "react-hook-form": "^7.32.2",
     "responsive-loader": "^2.3.0",
