--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@next/eslint-plugin-next": "^12.1.6",
+    "@next/eslint-plugin-next": "12.2.2",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.0.0",
     "os-name": "^5.0.1"
@@ -25,6 +25,7 @@
     "prettier": "prettier --write \"**/*.js\" \"**/*.ts\" \"**/*.tsx\" \"**/*.d.ts\" --cache",
     "prettier-check": "prettier  --list-different \"**/*.js\" \"**/*.ts\" \"**/*.tsx\" \"**/*.d.ts\" --cache",
     "eslint": "eslint '*/**/*.{js,ts,tsx}'",
+    "eslint-pre-push": "eslint '*/**/*.{js,ts,tsx}' --no-eslintrc -c .eslintrc.pre-push.js",
     "helm-lint": "helm lint ./helm",
     "prepare": "husky install"
   },
