--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "@next/eslint-plugin-next": "12.2.2",
-    "@types/mime-types": "^2.1.1",
-    "@types/node": "^18.0.0",
     "os-name": "^5.0.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
+    "@next/eslint-plugin-next": "12.2.2",
+    "@types/mime-types": "^2.1.1",
+    "@types/node": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-custom-rules": "file:eslint-custom-rules",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
