--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,10 @@
 version: 2.1
 orbs:
-  helm: circleci/helm@1.1.2
+  helm: circleci/helm@2.0.1
   docker: circleci/docker@1.7.0
   jq: circleci/jq@2.2.0
-  node: circleci/node@5.0.2
+  node: circleci/node@5.0.3
+  codecov: codecov/codecov@3.2.4
 executors:
   backend_test:
     docker:
@@ -127,12 +128,8 @@ jobs:
           root: ~/project/backend
           paths:
             - coverage
-      - run:
-          name: "Upload coverage"
-          command: |
-            curl https://uploader.codecov.io/latest/linux/codecov -o /tmp/codecov
-            chmod +x /tmp/codecov
-            /tmp/codecov -F backend
+      - codecov/upload:
+          flags: backend
       #- run:
       #    name: "Upload coverage"
       #    command: bash <(curl -s https://codecov.io/bash)
@@ -255,7 +252,6 @@ jobs:
     resource_class: large
 
 workflows:
-  version: 2
   build-deploy:
     jobs:
       - code_style
