--- a/backend/package.json
+++ b/backend/package.json
@@ -109,7 +109,7 @@
     "@types/express": "^4.17.12",
     "@types/faker": "^5.5.9",
     "@types/graphql-upload": "^8.0.12",
-    "@types/jest": "^28.1.2",
+    "@types/jest": "^29.2.4",
     "@types/lodash": "^4.14.190",
     "@types/luxon": "^3.1.0",
     "@types/mime-types": "^2.1.1",
@@ -123,16 +123,17 @@
     "get-port": "^5.0.0",
     "graceful-fs": "^4.2.10",
     "graphql-request": "^4.3.0",
-    "jest": "^28.1.1",
+    "jest": "^29.3.1",
     "jest-junit": "^13.2.0",
     "jest-mock": "^28.1.1",
     "locate-path": "^7.1.1",
     "nanoid": "^3.3.2",
     "nock": "^13.2.7",
-    "ts-jest": "^28.0.5",
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.4"
   },
   "overrides": {
     "graphql": "16.5.0"
