revert to downloading codecov uploader

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   docker: circleci/docker@1.7.0
   jq: circleci/jq@2.2.0
   node: circleci/node@5.0.3
-  codecov: codecov/codecov@3.2.4
+#  codecov: codecov/codecov@3.2.4
 executors:
   backend_test:
     docker:
@@ -128,11 +128,15 @@ jobs:
           root: ~/project/backend
           paths:
             - coverage
-      - codecov/upload:
-          flags: backend
-      #- run:
-      #    name: "Upload coverage"
-      #    command: bash <(curl -s https://codecov.io/bash)
+      - run:
+          name: "Upload coverage"
+          command: |
+            curl https://uploader.codecov.io/latest/linux/codecov -o /tmp/codecov
+            chmod +x /tmp/codecov
+            /tmp/codecov -F backend -n "${CIRCLE_BUILD_NUM}"
+  ### when codecov orb is enabled
+  #    - codecov/upload:
+  #        flags: backend
     # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
     resource_class: large
   # could combine the artifacts in this step if needed, now the codecov/junit stuff combines automatically
