--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -9,6 +9,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
+    "strictNullChecks": true,
     "noEmit": false,
     "noImplicitAny": true,
     "noUnusedLocals": true,
