--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -39,6 +39,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "strictNullChecks": true,
     "target": "esnext",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
