--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
+    "deepmerge": "^4.2.2",
     "express": "^4.17.3",
     "extract-files": "^13.0.0",
     "formik": "^2.2.9",
