--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "send-ai-statistics": "node ./dist/bin/sendAiStatistics.js",
     "course-stats-emailer": "node ./dist/bin/courseStatsEmailer.js",
     "linkoping-stats-emailer": "node ./dist/bin/linkopingStatsEmailer.js",
+    "prague-stats-emailer": "node ./dist/bin/pragueStatsEmailer.js",
     "import-organizations": "node ./dist/bin/importOrganizations.js",
     "parse-file": "node ./dist/bin/parseFile.js",
     "start-kafka-consumers": "concurrently --kill-others --restart-tries 2 npm:kafka-consumer-*",
