fix mdx pages; small changes here and there

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,14 @@
     "generate-page-stubs": "node util/createStubs.js",
     "typecheck": "tsc --noEmit",
     "start:inspect": "NODE_ENV=production PORT=3021 NODE_OPTIONS=--inspect next start",
-    "graphql-codegen": "graphql-codegen --config codegen.yml",
-    "graphql-codegen:watch": "graphql-codegen --config codegen.yml --watch"
+    "graphql-codegen": "graphql-codegen --config codegen.ts",
+    "graphql-codegen:watch": "graphql-codegen --config codegen.ts --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.7.4",
+    "@apollo/client": "^3.7.5",
     "@date-io/core": "^2.16.0",
     "@date-io/luxon": "^2.16.1",
     "@emotion/react": "^11.10.5",
@@ -34,14 +34,14 @@
     "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.10.16",
-    "@mui/x-date-pickers": "^5.0.15",
-    "@next/bundle-analyzer": "^13.1.4",
-    "@next/env": "^13.0.4",
-    "@next/font": "^13.1.4",
-    "@next/mdx": "^13.1.4",
+    "@mui/material": "^5.11.6",
+    "@mui/x-date-pickers": "^5.0.16",
+    "@next/bundle-analyzer": "^13.1.6",
+    "@next/env": "^13.1.6",
+    "@next/font": "^13.1.6",
+    "@next/mdx": "^13.1.6",
     "apollo-upload-client": "^17.0.0",
-    "axios": "^1.2.3",
+    "axios": "^1.2.6",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "extract-files": "^13.0.0",
@@ -49,16 +49,16 @@
     "formik-mui": "^5.0.0-alpha.0",
     "formik-mui-x-date-pickers": "^0.0.1",
     "graphql": "16.6.0",
-    "immer": "^9.0.18",
+    "immer": "^9.0.19",
     "isomorphic-unfetch": "^4.0.2",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
     "luxon": "^2.5.0",
-    "material-ui-confirm": "^3.0.7",
+    "material-ui-confirm": "^3.0.8",
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.34.1",
     "morgan": "^1.10.0",
-    "next": "^13.1.4",
+    "next": "^13.1.6",
     "next-seo": "^5.15.0",
     "nookies": "^2.5.2",
     "papaparse": "^5.3.2",
@@ -66,9 +66,9 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-ga": "^3.3.1",
-    "react-hook-form": "^7.42.1",
+    "react-hook-form": "^7.43.0",
     "sharp": "^0.31.3",
-    "styled-jsx": "^5.1.1",
+    "styled-jsx": "^5.1.2",
     "tmc-client-js": "0.0.9",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
@@ -77,13 +77,13 @@
   },
   "devDependencies": {
     "@graphql-codegen/add": "^3.2.3",
-    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/fragment-matcher": "^3.3.3",
     "@graphql-codegen/gql-tag-operations-preset": "^1.7.4",
     "@graphql-codegen/time": "^3.2.3",
-    "@graphql-codegen/typescript": "^2.8.7",
-    "@graphql-codegen/typescript-document-nodes": "^2.3.12",
-    "@graphql-codegen/typescript-operations": "^2.5.12",
+    "@graphql-codegen/typescript": "^2.8.8",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.13",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
     "@svgr/webpack": "^6.5.1",
     "@types/lodash": "^4.14.190",
     "@types/luxon": "^2.4.0",
@@ -101,7 +101,7 @@
     "express-graphql": "^0.12.0",
     "next-statoscope": "^1.0.0",
     "source-map-support": "^0.5.21",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.5"
   },
   "overrides": {
     "graphql": "16.6.0"
