--- a/backend/package.json
+++ b/backend/package.json
@@ -118,6 +118,7 @@
     "@types/luxon": "^3.2.0",
     "@types/mime-types": "^2.1.1",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^18.14.2",
     "@types/nodemailer": "^6.4.7",
     "@types/sharp": "^0.31.1",
     "@types/shortid": "^0.0.29",
@@ -131,6 +132,7 @@
     "jest": "^29.4.3",
     "jest-junit": "^15.0.0",
     "jest-mock": "^29.4.3",
+    "jest-snapshot": "^29.4.3",
     "locate-path": "^7.2.0",
     "nanoid": "^3.3.2",
     "nock": "^13.3.0",
