try updating npm in build

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,10 +3,10 @@ FROM node:14-buster
 RUN apt-get update \
   && apt-get install -y build-essential libgl1-mesa-glx \
   && rm -rf /var/lib/apt/lists/*
-
 RUN mkdir -p /app && chown -R node /app
 
 USER node
+RUN npm i -g npm@9.5.1
 
 WORKDIR /app
 
