--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,6 @@ FROM node:14-buster
 RUN apt-get update \
   && apt-get install -yy build-essential libpng-dev postgresql-client libpq-dev redis-tools git jq \
   && rm -rf /var/lib/apt/lists/*
-
 RUN wget https://github.com/edenhill/librdkafka/archive/v1.8.2.tar.gz  -O - | tar -xz \
   && cd librdkafka-1.8.2 \
   && ./configure --prefix=/usr \
@@ -13,6 +12,7 @@ RUN wget https://github.com/edenhill/librdkafka/archive/v1.8.2.tar.gz  -O - | ta
 RUN mkdir -p /app && chown -R node /app
 
 USER node
+RUN npm i -g npm@9.5.1
 
 WORKDIR /app
 
