--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
   test_backend:
     executor: backend_test
     environment:
-      DATABASE_URL: postgres://root@localhost/circle_test
+      DATABASE_URL: postgres://root@localhost:5432/circle_test
       DB_HOST: localhost
       DB_PORT: 5432
       DB_USER: root
@@ -97,18 +97,9 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
-      # - run:
-      #     name: "Install psql client"
-      #     command: |
-      #       sudo apt-get update
-      #       sudo apt-get install postgresql-client
       - run:
-          name: "Wait for database"
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-      - run:
-          name: "Create extensions"
-          command: |
-            psql -d circle_test -U root -p 5432 -h localhost -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\"; CREATE EXTENSION IF NOT EXISTS \"pg_trgm\"; CREATE EXTENSION IF NOT EXISTS \"btree_gin\";"
+          name: "Prepare database"
+          command: "bin/prepare-db-for-tests.sh"
       - run:
           name: "Run tests"
           command: |
