fix icontemplate; fix redis oddities

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,7 +68,7 @@
     "react-hook-form": "^7.43.2",
     "sharp": "^0.31.3",
     "styled-jsx": "^5.1.2",
-    "tmc-client-js": "0.0.9",
+    "tmc-client-js": "^0.0.9",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
@@ -85,6 +85,7 @@
     "@graphql-codegen/typescript-document-nodes": "^3.0.1",
     "@graphql-codegen/typescript-operations": "^3.0.1",
     "@svgr/webpack": "^6.5.1",
+    "@types/babel__core": "^7.20.0",
     "@types/lodash": "^4.14.190",
     "@types/luxon": "^3.2.0",
     "@types/mdx-js__react": "^1.5.5",
