--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,13 +3,13 @@ orbs:
   helm: circleci/helm@2.0.1
   docker: circleci/docker@1.7.0
   jq: circleci/jq@2.2.0
-  node: circleci/node@5.0.3
+  node: circleci/node@5.1.0
 #  codecov: codecov/codecov@3.2.4
 executors:
   backend_test:
     docker:
-      - image: cimg/node:14.18.3
-      - image: cimg/postgres:11.13
+      - image: cimg/node:16.16.0
+      - image: cimg/postgres:14.6
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
@@ -21,7 +21,7 @@ executors:
 jobs:
   code_style:
     docker:
-      - image: cimg/node:14.18.3
+      - image: cimg/node:16.16.0
     steps:
       - checkout
       - node/install-packages
@@ -84,7 +84,7 @@ jobs:
   test_backend:
     executor: backend_test
     environment:
-      DATABASE_URL: postgres://root@localhost:5432/circle_test
+      DATABASE_URL: postgres://root@localhost/circle_test
       DB_HOST: localhost
       DB_PORT: 5432
       DB_USER: root
@@ -97,9 +97,18 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/project
+      # - run:
+      #     name: "Install psql client"
+      #     command: |
+      #       sudo apt-get update
+      #       sudo apt-get install postgresql-client
       - run:
-          name: "Prepare database"
-          command: "bin/prepare-db-for-tests.sh"
+          name: "Wait for database"
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: "Create extensions"
+          command: |
+            psql -d circle_test -U root -p 5432 -h localhost -c "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\"; CREATE EXTENSION IF NOT EXISTS \"pg_trgm\"; CREATE EXTENSION IF NOT EXISTS \"btree_gin\";"
       - run:
           name: "Run tests"
           command: |
