--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.11.12",
+    "@mui/x-data-grid": "^6.0.1",
     "@mui/x-date-pickers": "^6.0.1",
     "@next/bundle-analyzer": "^13.2.4",
     "@next/env": "^13.2.4",
