--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,6 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.11.12",
-    "@mui/x-data-grid": "^6.0.1",
     "@mui/x-date-pickers": "^6.0.1",
     "@next/bundle-analyzer": "^13.2.4",
     "@next/env": "^13.2.4",
@@ -59,6 +58,7 @@
     "module-resolver": "^1.0.0",
     "monaco-editor": "^0.36.1",
     "morgan": "^1.10.0",
+    "mui-datatables": "^4.3.0",
     "next": "^13.2.4",
     "next-seo": "^5.15.0",
     "nookies": "^2.5.2",
@@ -91,6 +91,7 @@
     "@types/luxon": "^3.2.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/mime-types": "^2.1.1",
+    "@types/mui-datatables": "^4.3.3",
     "@types/node": "^18.15.0",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.28",
