fix map iterator

--- a/backend/tsconfig.production.json
+++ b/backend/tsconfig.production.json
@@ -6,6 +6,7 @@
     },
     "rootDir": ".",
     "lib": ["es2016", "esnext"],
+    "target": "es6",
     "module": "commonjs",
     "outDir": "./dist",
     "strict": true,
