--- a/helm/templates/kafka/kafka-bridge-deployment.yml
+++ b/helm/templates/kafka/kafka-bridge-deployment.yml
@@ -52,3 +52,5 @@ spec:
                 secretKeyRef:
                   name: redis
                   key: redis-password
+            - name: UV_THREADPOOL_SIZE
+              value: "8"
