create new topic and consumer

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -22,6 +22,8 @@ kafkaConsumer:
     replicaCount: 10
   userPointsRealtime:
     replicaCount: 1
+  userCoursePoints:
+    replicaCount: 2
 
 email:
   # controls whether the background email service should be running
