--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "kafka-consumer-user-course-progress-realtime": "node ./dist/bin/kafkaConsumer/userCourseProgressRealtimeConsumer/kafkaConsumer.js",
     "kafka-consumer-user-points-batch": "node ./dist/bin/kafkaConsumer/userPointsConsumer/kafkaConsumer.js",
     "kafka-consumer-user-points-realtime": "node ./dist/bin/kafkaConsumer/userPointsRealtimeConsumer/kafkaConsumer.js",
+    "kafka-consumer-user-course-points-batch": "node ./dist/bin/kafkaConsumer/userCoursePointsConsumer/kafkaConsumer.js",
     "kafka-consumer-exercises": "node ./dist/bin/kafkaConsumer/exerciseConsumer/kafkaConsumer.js",
     "generate": "npm run generate:prisma && npm run generate:nexus",
     "generate:prisma": "prisma generate",
