--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,7 @@
     "react-hook-form": "^7.43.8",
     "sharp": "^0.31.3",
     "styled-jsx": "^5.1.2",
-    "tmc-client-js": "0.0.9",
+    "tmc-client-js": "^0.0.11",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
@@ -76,10 +76,13 @@
   "devDependencies": {
     "@graphql-codegen/add": "^4.0.1",
     "@graphql-codegen/cli": "^3.2.1",
+    "@graphql-codegen/client-preset": "^3.0.0",
+    "@graphql-codegen/client-preset-swc-plugin": "^0.1.3",
     "@graphql-codegen/fragment-matcher": "^4.0.1",
     "@graphql-codegen/gql-tag-operations-preset": "^2.1.0",
     "@graphql-codegen/time": "^4.0.0",
     "@graphql-codegen/typescript": "^3.0.1",
+    "@graphql-codegen/typescript-apollo-client-helpers": "^2.2.6",
     "@graphql-codegen/typescript-document-nodes": "^3.0.1",
     "@graphql-codegen/typescript-operations": "^3.0.1",
     "@hookform/devtools": "^4.3.1",
