--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,7 @@
     "@apollo/server-plugin-landing-page-graphql-playground": "^4.0.0",
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
     "@google-cloud/storage": "^6.9.3",
+    "@graphql-tools/schema": "^9.0.17",
     "@prisma/client": "2.23.0",
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
@@ -77,6 +78,7 @@
     "graphql": "16.6.0",
     "graphql-scalars": "^1.20.1",
     "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.12.1",
     "helmet": "^6.0.1",
     "JSONStream": "^1.3.5",
     "knex": "^2.4.2",
@@ -101,6 +103,7 @@
     "websocket": "^1.0.34",
     "winston": "^3.8.2",
     "winston-sentry-log": "^1.0.26",
+    "ws": "^8.13.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
@@ -124,6 +127,7 @@
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^8.3.4",
     "@types/websocket": "^1.0.5",
+    "@types/ws": "^8.5.4",
     "esm": "^3.2.25",
     "faker": "^5.5.3",
     "get-port": "^5.0.0",
