--- a/backend/package.json
+++ b/backend/package.json
@@ -99,6 +99,7 @@
     "redis": "^4.6.4",
     "sharp": "^0.31.3",
     "shortid": "^2.2.16",
+    "tmc-client-js": "^0.0.11",
     "uuid": "^9.0.0",
     "websocket": "^1.0.34",
     "winston": "^3.8.2",
@@ -141,7 +142,6 @@
     "nock": "^13.3.0",
     "prettier": "^2.8.4",
     "prisma": "2.23.0",
-    "tmc-client-js": "0.0.9",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
