copy patches before npm ci

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,6 +17,7 @@ WORKDIR /app
 
 COPY --chown=node package.json /app/
 COPY --chown=node package-lock.json /app/
+COPY --chown=node patches /app/patches
 
 RUN env BUILD_LIBRDKAFKA=0 npm ci
 
