add docker layer caching to build; remove some duplicate indexes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   node: circleci/node@5.1.0
 #  codecov: codecov/codecov@3.2.4
 executors:
-  backend_test:
+  node_postgres:
     docker:
       - image: cimg/node:16.16.0
       - image: cimg/postgres:14.6
@@ -14,9 +14,12 @@ executors:
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
           POSTGRES_PASSWORD: ""
-  backend_build:
+  cloudsdk_node:
     docker:
       - image: eu.gcr.io/moocfi-public/cloud-sdk-node:latest
+  cloudsdk:
+    docker:
+      - image: google/cloud-sdk:latest
 
 jobs:
   code_style:
@@ -38,11 +41,11 @@ jobs:
           command: "bin/helm.sh"
 
   build_frontend:
-    docker:
-      - image: google/cloud-sdk:latest
+    executor: cloudsdk
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - restore_cache:
           keys:
           - dependency-cache-{{ checksum "frontend/package.json" }}-checksum "frontend/package-lock.json" }}
@@ -61,7 +64,7 @@ jobs:
     resource_class: large
 
   prepare_backend_test:
-    executor: backend_test
+    executor: node_postgres
     working_directory: ~/project/backend
     steps:
       - checkout:
@@ -98,7 +101,7 @@ jobs:
     resource_class: large
 
   test_backend:
-    executor: backend_test
+    executor: node_postgres
     environment:
       DATABASE_URL: postgres://root@localhost/circle_test
       DB_HOST: localhost
@@ -183,11 +186,12 @@ jobs:
   # could also be only for master/staging since now we're doing npm install earlier, and if it passes there, it will pass here too
   # - only that the node version is different in backend image?
   build_backend:
-    executor: backend_build
+    executor: cloudsdk_node
     steps:
       - checkout
       - setup_remote_docker:
           version: 19.03.13
+          docker_layer_caching: true
       - jq/install
       - docker/install-docker-tools:
           docker-compose-version: 1.29.2
@@ -221,12 +225,13 @@ jobs:
     resource_class: large
 
   push_backend:
-    executor: backend_build
+    executor: cloudsdk_node
     steps:
       - attach_workspace:
           at: ~/project
       - setup_remote_docker:
           version: 19.03.13
+          docker_layer_caching: true
       - run:
           name: "Restore image"
           command: |
@@ -275,11 +280,11 @@ jobs:
   #         name: "Push image if on master"
   #         command: "bin/push-docker-auth-image.sh"
   deploy_to_production:
-    docker:
-      - image: google/cloud-sdk:latest
+    executor: cloudsdk
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          docker_layer_caching: true
       - helm/install-helm-client:
           version: v3.4.2
       - run:
