--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,21 +26,22 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
-    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@hookform/error-message": "^2.0.1",
-    "@hookform/resolvers": "^3.0.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@monaco-editor/react": "^4.4.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.11.13",
-    "@mui/x-date-pickers": "^6.0.3",
-    "@next/env": "^13.2.1",
+    "@monaco-editor/react": "^4.5.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.126",
+    "@mui/material": "^5.12.1",
+    "@mui/x-date-pickers": "^6.2.0",
+    "@next/env": "^13.3.0",
     "@next/mdx": "^13.3.0",
     "apollo-upload-client": "^17.0.0",
     "compression": "^1.7.4",
+    "css-mediaquery": "^0.1.2",
     "deepmerge": "^4.3.1",
     "express": "^4.18.2",
     "extract-files": "^13.0.0",
@@ -49,14 +50,14 @@
     "formik-mui-x-date-pickers": "^0.0.1",
     "graphql": "16.6.0",
     "graphql-ws": "^5.12.1",
-    "immer": "^9.0.19",
+    "immer": "^10.0.1",
     "isomorphic-unfetch": "^4.0.2",
     "lodash": "^4.17.21",
     "lqip-loader": "^2.2.1",
     "luxon": "^3.3.0",
     "material-ui-confirm": "^3.0.9",
     "module-resolver": "^1.0.0",
-    "monaco-editor": "^0.36.1",
+    "monaco-editor": "^0.37.1",
     "morgan": "^1.10.0",
     "mui-datatables": "^4.3.0",
     "next": "^13.3.0",
@@ -66,14 +67,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.43.8",
-    "sharp": "^0.31.3",
+    "react-hook-form": "^7.43.9",
+    "sharp": "^0.32.0",
     "styled-jsx": "^5.1.2",
     "tmc-client-js": "^0.0.11",
+    "ua-parser-js": "^1.0.35",
     "url": "^0.11.0",
     "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
-    "yup": "^1.0.2"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@graphql-codegen/add": "^4.0.1",
@@ -90,25 +92,27 @@
     "@hookform/devtools": "^4.3.1",
     "@svgr/webpack": "^7.0.0",
     "@types/babel__core": "^7.20.0",
-    "@types/lodash": "^4.14.190",
-    "@types/luxon": "^3.2.0",
+    "@types/css-mediaquery": "^0.1.1",
+    "@types/lodash": "^4.14.194",
+    "@types/luxon": "^3.3.0",
     "@types/mdx-js__react": "^1.5.5",
     "@types/mime-types": "^2.1.1",
     "@types/mui-datatables": "^4.3.3",
     "@types/node": "^18.15.3",
     "@types/papaparse": "^5.3.7",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-fontawesome": "^1.6.5",
+    "@types/ua-parser-js": "^0.7.36",
     "@types/uuid": "^9.0.1",
     "cors": "^2.8.5",
     "event-stream": "^4.0.1",
     "express-graphql": "^0.12.0",
     "next-statoscope": "^1.0.0",
     "source-map-support": "^0.5.21",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.4",
     "user-agent-data-types": "^0.3.1",
-    "webpack": "^5.76.2"
+    "webpack": "^5.79.0"
   },
   "overrides": {
     "graphql": "16.6.0"
