fix helm chart config key

--- a/helm/templates/kafka/kafka-consumer-user-course-points-realtime.yml
+++ b/helm/templates/kafka/kafka-consumer-user-course-points-realtime.yml
@@ -9,7 +9,7 @@ spec:
     matchLabels:
       app: kafka-consumer-user-course-points-realtime
       {{- include "helm.selectorLabels" . | nindent 6 }}
-  replicas: {{ .Values.kafkaConsumer.userCoursePoints.replicaCount }}
+  replicas: {{ .Values.kafkaConsumer.userCoursePointsRealtime.replicaCount }}
   template:
     metadata:
       labels:
