--- a/backend/package.json
+++ b/backend/package.json
@@ -63,7 +63,8 @@
     "@devoxa/prisma-relay-cursor-connection": "^2.2.2",
     "@google-cloud/storage": "^6.10.0",
     "@graphql-tools/schema": "^9.0.19",
-    "@prisma/client": "2.23.0",
+    "@morgothulhu/nexus-plugin-prisma": "^0.43.13",
+    "@prisma/client": "^4.13.0",
     "@sentry/integrations": "^6.19.7",
     "@sentry/node": "^6.19.7",
     "axios": "^1.4.0",
@@ -88,13 +89,13 @@
     "morgan": "^1.10.0",
     "newrelic": "^9.15.0",
     "nexus": "^1.3.0",
-    "nexus-plugin-prisma": "^0.35.0",
     "node-rdkafka": "^2.16.0",
     "nodemailer": "^6.9.1",
     "patch-package": "^7.0.0",
     "pg": "^8.10.0",
     "pg-query-stream": "^4.4.0",
-    "prisma": "^2.23.0",
+    "prisma": "^4.13.0",
+    "prisma-graphql-type-decimal": "^3.0.0",
     "redis": "^4.6.6",
     "sharp": "^0.32.1",
     "shortid": "^2.2.16",
@@ -142,7 +143,6 @@
     "nanoid": "^3.3.2",
     "nock": "^13.3.1",
     "prettier": "^2.8.8",
-    "prisma": "2.23.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
