--- a/backend/package.json
+++ b/backend/package.json
@@ -80,6 +80,7 @@
     "graphql-upload": "^13.0.0",
     "graphql-ws": "^5.12.1",
     "helmet": "^6.1.5",
+    "json-parse-even-better-errors": "^3.0.0",
     "JSONStream": "^1.3.5",
     "knex": "^2.4.2",
     "lodash": "^4.17.20",
@@ -125,7 +126,6 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.16.3",
     "@types/nodemailer": "^6.4.7",
-    "@types/sharp": "^0.32.0",
     "@types/shortid": "^0.0.29",
     "@types/uuid": "^8.3.4",
     "@types/websocket": "^1.0.5",
