backend major/minor/patch deps update

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,20 @@
 FROM node:18.16.0-alpine
 
 RUN apk update && \
-    apk add --no-cache build-base libpng-dev postgresql-client libpq redis git jq bash python3
+    apk --no-cache add \
+      build-base \
+      libpng-dev \
+      postgresql-client \
+      libpq \
+      redis \
+      git \
+      jq \
+      bash \
+      python3
 
-RUN wget https://github.com/edenhill/librdkafka/archive/v2.0.2.tar.gz  -O - | tar -xz \
-  && cd librdkafka-2.0.2 \
-  && ./configure --prefix=/usr \
-  && make && make install \
-  && cd ..
+RUN apk --nocache add \
+  librdkafka=2.1.1-r0 \
+  librdkafka-dev=2.1.1-r0
 
 RUN mkdir -p /app && chown -R node /app
 
@@ -19,7 +26,9 @@ COPY --chown=node package.json /app/
 COPY --chown=node package-lock.json /app/
 COPY --chown=node patches /app/patches
 
-RUN env BUILD_LIBRDKAFKA=0 npm ci
+ARG BUILD_LIBRDKAFKA=0
+RUN npm ci
+RUN rm -rf /node_modules/node-rdkafka/deps
 
 COPY --chown=node . /app
 
@@ -29,8 +38,6 @@ RUN cp .env.example .env \
     && npm run generate \
     && env NODE_ENV=production GOOGLE_CLOUD_STORAGE_BUCKET=x npm run build
 RUN npm run build-sourcemap
-#    && cp -R sourcemap/bin dist/bin \
-#    && rm .env
 RUN npm run copy-env 
 
 ENV NODE_ENV=production
