--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,8 +192,7 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true
       - jq/install
-      - docker/install-docker-tools:
-          docker-compose-version: 1.29.2
+      - docker/install-docker-tools
       - run:
           name: patch-package hash
           command: md5sum backend/patches/* > backend/patches.hash
