build librdkafka until alpine is upgraded in node image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,9 +12,15 @@ RUN apk update && \
       bash \
       python3
 
-RUN apk --no-cache add \
-  librdkafka=2.1.1-r0 \
-  librdkafka-dev=2.1.1-r0
+RUN wget https://github.com/edenhill/librdkafka/archive/v2.1.1.tar.gz  -O - | tar -xz \
+  && cd librdkafka-2.1.1 \
+  && ./configure --prefix=/usr \
+  && make && make install \
+  && cd ..
+# when node image incorporates alpine 3.18
+#  RUN apk --no-cache add \
+#   librdkafka=2.1.1-r0 \
+#   librdkafka-dev=2.1.1-r0
 
 RUN mkdir -p /app && chown -R node /app
 
@@ -28,7 +34,8 @@ COPY --chown=node patches /app/patches
 
 ARG BUILD_LIBRDKAFKA=0
 RUN npm ci
-RUN rm -rf /node_modules/node-rdkafka/deps
+# when node image incorporates alpine 3.18
+# RUN rm -rf /node_modules/node-rdkafka/deps
 
 COPY --chown=node . /app
 
